test/corpus/declaration/primitive.txt
==================
Primitive
==================

primitive
  primWord64ToNat : Word64 → Nat

---

(source_file
  (primitive
    (type_signature
      (field_name)
      (expr (atom (qid)) (expr (atom (qid)))))
  )
)

==================
Primitive with attribute
==================

primitive
  @0 primShowNat : Nat → String

---

(source_file
  (primitive
    (type_signature
      (attributes (attribute (qid)))
      (field_name)
      (expr (atom (qid)) (expr (atom (qid)))))))
