test/corpus/declaration/syntax.txt
==================
Syntax
==================

syntax bind e₁ (λ x → e₂) = x ← e₁ , e₂

---

(source_file
  (syntax (id)
    (hole_names
      (hole_name (id))
      (hole_name (bid) (id)))
    (id)
    (id)
    (id)
    (id)
    (id)
    ))

==================
Syntax with multi-variable lambda hole
==================

syntax f (λ x y → C) = f

---

(source_file
  (syntax
    (id)
    (hole_names
      (hole_name
        (bid)
        (bid)
        (id)))
    (id)))
